# hass-lost-apple-integration

./: .gitignore  AGENTS.md  LICENSE  MEMORY.md  README.md  data.json  hacs.json  mypy.ini  prek.toml  pyproject.toml  repository.yaml
.github/scripts/: __init__.py  update_release_version.py
.github/workflows/: ci.yml  post_coverage_to_pr.yml  pytest_coverage.yml  release-app-images.yml  release.yml  validate.yml
app/lost_apple/: DOCS.md  Dockerfile  README.md  config.yaml  run.sh
app/lost_apple/translations/: en.yaml
app/src/lost_apple_app/: __init__.py  __main__.py  api.py  auth.py  config.py  findmy_client.py  models.py  polling.py  storage.py  web.py
custom_components/lost_apple/: __init__.py  api_client.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  entity.py  manifest.json  repairs.py  sensor.py
docs/: development.md  security.md
docs/superpowers/plans/: 2026-05-23-hass-lost-apple.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_7b17d276a293fb7f___init___py.html  z_7b17d276a293fb7f_api_client_py.html  z_7b17d276a293fb7f_config_flow_py.html  z_7b17d276a293fb7f_const_py.html  z_7b17d276a293fb7f_coordinator_py.html  z_7b17d276a293fb7f_device_tracker_py.html  z_7b17d276a293fb7f_diagnostics_py.html  z_7b17d276a293fb7f_entity_py.html  z_7b17d276a293fb7f_repairs_py.html  z_7b17d276a293fb7f_sensor_py.html  z_c16f044681963e02___main___py.html  z_c16f044681963e02_api_py.html  z_c16f044681963e02_auth_py.html  z_c16f044681963e02_config_py.html  z_c16f044681963e02_findmy_client_py.html  z_c16f044681963e02_models_py.html  z_c16f044681963e02_polling_py.html  z_c16f044681963e02_storage_py.html  z_c16f044681963e02_web_py.html
tests/: __init__.py  conftest.py  helpers.py  test_config_flow.py  test_release_workflow.py  test_version_metadata.py
tests/app/: __init__.py  test_api.py  test_auth_state.py  test_config.py  test_findmy_client.py  test_main.py  test_polling.py  test_storage.py  test_web.py
tests/fixtures/: device_snapshot.json
tests/integration/: __init__.py  test_config_flow.py  test_diagnostics.py  test_entities.py
